@@ -264,7 +264,7 @@
 143,0,0,0,600000,0
 
 //-- SM_FATALBLOW
-145,0,0,0,0,3000
+145,0,0,0,0,5000
 
 //-- AC_CHARGEARROW
 148,1500,0,0,0,0
@@ -315,7 +315,7 @@
 //-- NPC_SILENCEATTACK
 178,0,0,0,0,10000:12000:14000:16000:18000:20000:22000:24000:26000:28000
 //-- NPC_STUNATTACK
-179,0,0,0,0,3000
+179,0,0,0,0,5000
 //-- NPC_PETRIFYATTACK
 180,0,0,0,5000,10000:11000:12000:13000:14000:15000:16000:17000:18000:19000
 //-- NPC_CURSEATTACK
@@ -676,7 +676,7 @@
 //-- PF_SPIDERWEB
 405,0,0,0,30000,8000
 //-- ASC_METEORASSAULT (Upkeep2 times are duration of: blind(lv1), stun(lv2) or bleeding (lv3)
-406,500,500,0,0,10000:3000:120000
+406,500,500,0,0,10000:5000:120000
 //-- ASC_CDP
 407,0,500,0,0,0
 //==========================================
